_sass/jekyll-wgdd/_nav.scss
nav.page-navigation-main {
  position: absolute;
  top: 0;
  left: 0;
  padding: $head-padding-top;
  z-index: $sidebar-z-index;

  #page-navigation-main-title {
    display: block;
    position: absolute;
    //top: 0;
    //left: 0;
    width: $nav-button-size;
    height: 0;
    padding-top: $nav-button-size;
    overflow: hidden;
    border: 1px solid #ccc;
    background: white 10px 10px / 20px 20px no-repeat;
    background-image: -webkit-repeating-linear-gradient(#ccc, #ccc 2px, #fff 2px, #fff 4px);
    background-image: repeating-linear-gradient(#ccc, #ccc 2px, #fff 2px, #fff 4px);
    z-index: $sidebar-z-index;
  }

  ul.page-navigation-main-list {
    display: none;
    position: fixed;
    background-image: linear-gradient(to left, $foot-background-color, $page-background-color);
    //background-color: $head-background-color;
    top: 0;
    left: 0;
    width: 13%;
    padding-top: 2 * $head-padding-top + $nav-button-size;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    height: 100%;

    li {
      display: block;
      padding: 5px;

      a {
        display: block;
        text-decoration: none;
      }
    }
  }

  &:hover {

    #page-navigation-main-title {
      background-image: linear-gradient(45deg, transparent 13px, #ccc 13px, #ccc 15px, transparent 0),
                        linear-gradient(-45deg, white 13px, #ccc 13px, #ccc 15px, white 0);
    }

    ul.page-navigation-main-list {
      display: block;
    }
  }
}

//#page-navigation-main-title:focus + ul.page-navigation-main-list {
//  display: block;
//}

